--- a/.gitattributes
+++ b/.gitattributes
@@ -1,3 +1,4 @@
 data/GloVe_vectors_de_part_01 filter=lfs diff=lfs merge=lfs -text
 data/GloVe_vectors_de_part_02 filter=lfs diff=lfs merge=lfs -text
 data/glove.6B.100d.txt filter=lfs diff=lfs merge=lfs -text
+data/GloVe_vectors_de_50000.txt filter=lfs diff=lfs merge=lfs -text
