--- a/requirements.txt
+++ b/requirements.txt
@@ -4,6 +4,7 @@ scikit-learn>=0.24.1
 ipykernel>=6.0.1
 matplotlib-inline>=0.1.2
 Flask>=2.0.1
+waitress>=2.0.0
 gunicorn>=20.1.0
 boto3>=1.18.5
 s3fs>=0.4.0
